# 100-exercises-to-learn-rust

./: Cargo.toml  tmpalb.txt
exercises/02_basic_calculator/01_integers/src/: lib.rs
exercises/02_basic_calculator/02_variables/src/: lib.rs
exercises/02_basic_calculator/03_if_else/src/: lib.rs
exercises/02_basic_calculator/04_panics/src/: lib.rs
exercises/02_basic_calculator/05_factorial/src/: lib.rs
exercises/02_basic_calculator/06_while/src/: lib.rs
exercises/02_basic_calculator/08_overflow/: Cargo.toml
exercises/03_ticket_v1/02_validation/src/: lib.rs
exercises/03_ticket_v1/07_setters/src/: lib.rs
exercises/03_ticket_v1/12_outro/src/: lib.rs
exercises/04_traits/02_orphan_rule/src/: lib.rs
exercises/04_traits/09_from/src/: lib.rs
exercises/04_traits/10_assoc_vs_generic/src/: lib.rs
exercises/04_traits/11_clone/src/: lib.rs
exercises/04_traits/14_outro/: Cargo.toml
exercises/04_traits/14_outro/src/: lib.rs
exercises/04_traits/14_outro/tests/: integration.rs
exercises/05_ticket_v2/03_variants_with_data/src/: lib.rs
exercises/05_ticket_v2/05_nullability/src/: lib.rs
exercises/05_ticket_v2/06_fallibility/src/: lib.rs
exercises/05_ticket_v2/07_unwrap/src/: lib.rs
exercises/05_ticket_v2/12_thiserror/src/: lib.rs
exercises/06_ticket_management/10_slices/: Cargo.toml
exercises/08_futures/08_outro/: Cargo.toml
exercises/08_futures/08_outro/src/: data.rs  lib.rs  main.rs  server.rs  store.rs
exercises/08_futures/08_outro/tests/: test_server.rs
helpers/ticket_fields/src/: description.rs  title.rs
(+27 files in other folders)
