[package]
name = "outro_08"
version = "0.1.0"
edition = "2021"

[dependencies]
ticket_fields = { path = "../../../helpers/ticket_fields" }
# actix-rt = { version="2.10" }
serde = { version="1" }
actix-web = { version="4.7" }
async-std = { version="1" }
async-attributes = { version="1" }
tokio = { version = "1", features = ["full"] }