[package]
name = "outro_08"
version = "0.1.0"
edition = "2021"

[dependencies]
ticket_fields = { path = "../../../helpers/ticket_fields" }
# actix-rt = { version="2.10" }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
form_urlencoded = "1"
thiserror = "1.0.59"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
reqwest = { version = "0.12.4" }
hyper-util = { version = "0.1", features = ["full"] }
actix-web = { version="4.7" }
async-std = { version="1" }
async-attributes = { version="1" }
multipart = { version="0.18" }
hyper-body-to-bytes = { version="0.1" }